--- a/canvas.css
+++ b/canvas.css
@@ -3,10 +3,15 @@
     background-color: black; 
     width:100%; 
     height: 100%; 
+    position: relative;
     /* display: flex; */
 }
 .canvas{
     margin: 0 auto;
     display: block;
     /* flex-direction: column; */
+}
+p{
+    text-indent: 25px;
+    margin-bottom: 10px;
 }
